<resources>
    <string name="app_name">privacy-firebase</string>
    <string name="signin_button_text">Sign in</string>
    <string name="login_title_text">Please authenticate yourself</string>
    <string name="username_field_hint_text">Email</string>
    <string name="password_field_hint_text">Password</string>
    <string name="clear_fields_button_text">Clear fields</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="sign_out_button_text">Sign out</string>
    <string name="submit_button">Submit</string>
    <string name="name_input_field">Enter your name</string>
    <string name="ksu_logo_text">KSU Logo</string>
    <string name="response_here">Response here</string>
    <string name="last_question_text">Last</string>
    <string name="next_question_text">Next</string>
</resources>