<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/authentication_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:maxHeight="300dp"
            android:maxWidth="300dp"
            android:src="@drawable/ksu_square_logo"
            android:layout_marginBottom="12dp"/>

        <TextView
            android:id="@+id/login_title"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title_text"
            android:textColorHint="@color/black"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/username_field_hint_text"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_field_hint_text"
            android:textColorHint="@color/black"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/authentication_fields">

            <Button
                android:layout_marginEnd="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_button_text"
                android:id="@+id/sign_in_button"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_button_text"
                android:id="@+id/sign_up_button"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_fields_button_text"
            android:id="@+id/clear_fields_button"
            android:textStyle="bold"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>